0.2.4 2021-04-27
    - Fix temporary session-riding capabilities.

0.2.3 2021-03-24
    - Added trail info to RTF export.