@@ -109,6 +109,18 @@
       <artifactId>commons-io</artifactId>
       <version>2.8.0</version>
     </dependency>
+
+    <!-- Logging -->
+    <dependency>
+      <groupId>org.tinylog</groupId>
+      <artifactId>tinylog-impl</artifactId>
+      <version>2.4.0-M1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.tinylog</groupId>
+      <artifactId>tinylog-api</artifactId>
+      <version>2.4.0-M1</version>
+    </dependency>
     
   </dependencies>
   
