@@ -1,0 +1,2 @@
+writer        = console
+writer.format = {date: yyyy-MM-dd HH:mm:ss.SSS}:{level}: {message} at {file}:{line}
