@@ -1,5 +1,6 @@
 0.2.4 2021-04-27
     - Fix temporary session-riding capabilities.
+    - Introduced central tinylog.
 
 0.2.3 2021-03-24
     - Added trail info to RTF export.
